--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -86,7 +86,7 @@ jobs:
  
       - name: Run Tests
 
-        run: pytest
+        run: pytest test_app.py
 
         working-directory: ./Project/backend
  
@@ -120,13 +120,13 @@ jobs:
 
         run: |
 
-          docker build -t bulushi9/project-frontend:latest ./Project/frontend
+          docker build -t msvmahsa/project-frontend:latest ./Project/frontend
 
       - name: Build Backend Docker Image
 
         run: |
 
-          docker build -t bulushi9/project-backend:latest ./Project/backend
+          docker build -t msvmahsa/project-backend:latest ./Project/backend
 
       - name: Push Docker Images
 
@@ -134,9 +134,8 @@ jobs:
 
         run: |
 
-          docker push bulushi9/project-frontend:latest
-
-          docker push bulushi9/project-backend:latest
+          docker push msvmahsa/project-frontend:${{ github.sha }}
+          docker push msvmahsa/project-backend:${{ github.sha }}
  
   deploy:
 
