--- a/Project/github-actions.yml
+++ b/Project/github-actions.yml
@@ -10,9 +10,9 @@ on:
 
 jobs:
   # TODO: Define a job for building and testing the frontend
-  frontend:
-    runs-on: ubuntu-latest
-    steps:
+  #frontend:
+    #runs-on: ubuntu-latest
+    #steps:
       # TODO: Checkout code
       # TODO: Setup Node.js
       # TODO: Install dependencies
