--- a/Project/github-actions.yml
+++ b/Project/github-actions.yml
@@ -10,13 +10,12 @@ on:
 
 jobs:
   # TODO: Define a job for building and testing the frontend
-  #frontend:
+  frontend:
     runs-on: ubuntu-latest
     steps:
       # TODO: Checkout code
       # TODO: Setup Node.js
       # TODO: Install dependencies
-      # TODO: Run tests
       # TODO: Build the React app
 
   # TODO: Define a job for building and testing the backend
