--- a/Project/frontend/package.json
+++ b/Project/frontend/package.json
@@ -18,6 +18,21 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+"devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.18.6"
+},
+"jest": {
+  "transform": {
+    "^.+\\.(js|jsx)$": "babel-jest"
+  },
+  "moduleNameMapper": {
+    "\\.(css|less|scss|sass)$": "identity-obj-proxy"
+  },
+  "transformIgnorePatterns": [
+    "/node_modules/(?!axios|other-modules-that-need-transform)"
+  ]
+}
+,
   "eslintConfig": {
     "extends": [
       "react-app",
