--- a/Project/frontend/package.json
+++ b/Project/frontend/package.json
@@ -9,7 +9,7 @@
     "axios": "^1.7.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -18,21 +18,20 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-"devDependencies": {
+  "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.18.6"
-},
-"jest": {
-  "transform": {
-    "^.+\\.(js|jsx)$": "babel-jest"
   },
-  "moduleNameMapper": {
-    "\\.(css|less|scss|sass)$": "identity-obj-proxy"
+  "jest": {
+    "transform": {
+      "^.+\\.(js|jsx)$": "babel-jest"
+    },
+    "moduleNameMapper": {
+      "\\.(css|less|scss|sass)$": "identity-obj-proxy"
+    },
+    "transformIgnorePatterns": [
+      "/node_modules/(?!axios|other-modules-that-need-transform)"
+    ]
   },
-  "transformIgnorePatterns": [
-    "/node_modules/(?!axios|other-modules-that-need-transform)"
-  ]
-}
-,
   "eslintConfig": {
     "extends": [
       "react-app",
